# PythonForge

./: .gitignore  AGENTS.md  LICENSE  README.es.md  README.md  opencode.json  plan.md  pyproject.toml  setup.py  smoke_test.py
.github/workflows/: ci.yml  publish.yml
.typing/: README.md
docs/: background-work.es.md  background-work.md  configuration.es.md  configuration.md  grpc.es.md  grpc.md  http.es.md  http.md  observability.es.md  observability.md  security.es.md  security.md
examples/fastapi_service/: application.yaml  main.py
openspec/: config.yaml
openspec/changes/create-pythonforge/: design.md  proposal.md  tasks.md
openspec/changes/create-pythonforge/specs/background-work/: spec.md
openspec/changes/create-pythonforge/specs/configuration/: spec.md
openspec/changes/create-pythonforge/specs/observability/: spec.md
openspec/changes/create-pythonforge/specs/project-foundation/: spec.md
openspec/changes/create-pythonforge/specs/security-cryptography/: spec.md
openspec/changes/create-pythonforge/specs/tooling-distribution/: spec.md
openspec/changes/create-pythonforge/specs/transport-runtime/: spec.md
protos/pythonforge/example/v1/: example.proto
scripts/: gen_protos.sh
src/: context.py  errors.py
src/cli/: __init__.py  certs.py  scaffold.py
src/config/: __init__.py  client_config.py  loader.py  security_config.py  server_config.py  sources.py
src/encrypt/: __init__.py  keys.py
src/encrypt/kms/: __init__.py  aws.py  azure.py  gcp.py  protocol.py
src/encrypt/local/: __init__.py  asymmetric.py  hashing.py  symmetric.py
src/logger/: __init__.py  formatter.py  sanitizer.py  schema.py
src/pythonforge/: __init__.py  context.py  errors.py
src/pythonforge/config/: __init__.py  app_config.py  encrypt_config.py  full_config.py  loader.py  logger_config.py  security_config.py  server_config.py  trace_config.py
src/pythonforge/http/: app_factory.py  client.py
src/pythonforge/telemetry/: __init__.py
src/security/: __init__.py  _optional.py  http.py  jwt.py
src/telemetry/: __init__.py
src/tools/: __init__.py  jobs.py  workers.py
src/transport/: __init__.py  runtime.py
src/transport/grpc/: __init__.py  _optional.py  client.py  server.py
src/transport/grpc/interceptors/: __init__.py  auth.py  base.py  context.py  errors.py  logging.py
src/transport/http/: __init__.py  app_factory.py  client.py  health.py  middleware.py
tests/: conftest.py  test_context.py  test_errors.py
tests/cli/: test_cli.py
tests/config/: test_full_config.py  test_models.py
tests/contracts/: test_transport_parity.py
tests/encrypt/: test_kms.py  test_local.py
tests/logger/: test_logging_setup.py  test_sanitizer.py
tests/security/: test_auth_transports.py  test_jwt.py
tests/telemetry/: test_telemetry.py
tests/tools/: test_jobs.py  test_workers.py
tests/transport/: test_runtime.py
tests/transport/grpc/: test_integration.py
tests/transport/http/: test_app_factory.py  test_client.py
