[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonforge"
version = "0.0.1"
description = "A modular Python library for building modern services with FastAPI and gRPC."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi",
    "pydantic-settings",
    "httpx",
    "PyYAML",
    "python-dotenv",
]

[project.optional-dependencies]
grpc = [
    "grpcio",
    "grpcio-health-checking",
    "protobuf",
]
security = [
    "PyJWT[crypto]",
    "cryptography",
    "blake3",
]
telemetry = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-grpc",
]
aws = [
    "boto3",
]
azure = [
    "azure-identity",
    "azure-keyvault-keys",
]
gcp = [
    "google-cloud-kms",
]
cli = [
    "typer",
]
# Every runtime capability, excluding `dev`.
all = [
    "pythonforge[grpc,security,telemetry,aws,azure,gcp,cli]",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "grpcio-tools",
    "ruff",
    "mypy",
    "types-PyYAML",
    "bandit",
    "pip-audit",
    "build",
    "twine",
    "uvicorn[standard]",
]

[project.scripts]
qpython = "pythonforge.cli:main"

# The package lives flat under src/ but is imported/published as `pythonforge`.
# setup.py maps the directory and auto-discovers subpackages.
[tool.setuptools.package-dir]
pythonforge = "src"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
# Generated by scripts/gen_protos.sh -- never hand-edited, never linted.
extend-exclude = ["src/transport/grpc/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "C4"]
ignore = [
    "S101",
    # A `timeout` keyword mirrors asyncio.wait_for and is the natural API for
    # stop()/drain(); the implementations do use asyncio timeouts internally.
    "ASYNC109",
]

[tool.ruff.lint.per-file-ignores]
# B008: `Depends(...)` in a default is the documented FastAPI idiom.
"tests/**" = ["S101", "S105", "S106", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["pythonforge"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
mypy_path = ".typing"
explicit_package_bases = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

exclude = ["transport/grpc/generated"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "opentelemetry.exporter.otlp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pythonforge.transport.grpc.generated.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["grpc.*", "grpc_health.*", "blake3.*", "boto3.*", "botocore.*", "azure.*", "google.cloud.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore:Using .httpx. with .starlette.testclient. is deprecated",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/transport/grpc/generated/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
